--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "sass": "^1.59.3"
