--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^7.0.2",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
+    "nextjs-websocket": "^1.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
