--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "nextjs-websocket": "^1.0.11",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io": "^4.6.1",
