--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next-auth": "^4.20.1",
     "nextjs-websocket": "^1.0.11",
     "react": "18.2.0",
+    "react-chat-elements": "^12.0.8",
+    "react-chat-widget": "^3.1.4",
     "react-dom": "18.2.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
