--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "mongoose": "^7.0.2",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
+    "nextjs-cors": "^2.1.2",
     "nextjs-websocket": "^1.0.11",
     "openai": "^3.2.1",
     "react": "18.2.0",
     "react-chat-elements": "^12.0.8",
-    "react-chat-widget": "^3.1.4",
     "react-dom": "18.2.0",
+    "react-p5": "^1.3.33",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "ws": "^8.13.0"
